2003-03-31  Matt Austern  <austern@apple.com>

	* cpppch.c (struct cpp_savedstate): Add defs and n_defs members.
	(count_defs): Keep track of number of defs as well as total size.
	(write_defs): Put every definition in cpp_savedstate's defs array.
	(comp_hashnode): Define.  Comparison function for qsort.
	(cpp_write_pch_deps): Sort definitions before writing them.
	(struct ht_node_list): Define. Like cpp_savedstate but simpler.
	(collect_ht_nodes): Define.
	(cpp_valid_state): When verifying that undefined identifiers in
	the pch file are still undefined, read a sorted list of undefined
	identifiers, collect all defined identifiers into a sorted list,
	and walk through both lists to make sure there's no match.
	
2003-03-31  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300.md (a peephole2): New.

2003-03-31  Michael Matz  <matz@suse.de>

	* config/i386/i386.h (TARGET_FLT_EVAL_METHOD): Change 1 into 0.

2003-03-31  Segher Boessenkool  <segher@koffie.nl>

	PR target/10177
	* config/rs6000/rs6000.h (HARD_REGNO_RENAME_OK): New.
	* config/rs6000/rs6000.c (compute_vrsave_mask): Don't mark
	all call-clobbered registers as used.

2003-03-31  Michael Matz  <matz@suse.de>

	* cppexp.c (cpp_classify_number): Accept '.' after "0x".
	* testsuite/gcc.dg/cpp/c99-hexfloat-3.c: New file.

2003-03-31  Nathan Sidwell  <nathan@codesourcery.com>

	* gcov.c: Add -a & -u options.
	(struct arc_info): Add local_span, is_call_non_return,
	is_nonlocal_return, is_unconditional flags, remove is_call flag.
	(struct block_info): Add flags, is_call_site, is_nonlocal_return
	members. Make encodings a union with span member.
	(struct function_info): Add blocks_executed, line, src, line_next
	members.
	(struct coverage_info): Make branches a union with blocks member.
	(struct source_info): Add functions member.
	(object_summary, program_count): New global variables.
	(flag_all_blocks, flag_unconditional): New flags.
	(find_source, output_branch_count): New functions.
	(print_usage): Adjust.