@@ -1,3 +1,11 @@
+2003-03-31  Jason Merrill  <jason@redhat.com>
+
+	PR java/10145
+	* stor-layout.c (update_alignment_for_field): Respect
+	DECL_USER_ALIGN for zero-length bitfields, too.
+	* c-decl.c (finish_struct): Don't set DECL_ALIGN for normal
+	fields.
+
 2003-03-31  Matt Austern  <austern@apple.com>
 
 	* cpppch.c (struct cpp_savedstate): Add defs and n_defs members.
